--- a/asses/css/reservation_list.css
+++ b/asses/css/reservation_list.css
@@ -324,7 +324,7 @@ a {
   font-family: Poppins;
   font-size: 25px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 550;
   line-height: 1.5;
 }
 
@@ -385,7 +385,7 @@ a {
   color: #000;
   text-align: center;
   font-family: Poppins;
-  font-size: 18px;
+  font-size: 21px;
   font-weight: 550;
   line-height: 1.3;
   padding: 5px;
@@ -466,14 +466,14 @@ a {
   background-color: #ff0000; /* Màu nền của nút */
   color: #fff; /* Màu chữ của nút */
   border: none; /* Xóa viền của nút */
-  border-radius: 5px; /* Bo tròn góc của nút */
+  border-radius: 10px; /* Bo tròn góc của nút */
   cursor: pointer; /* Hiển thị icon con trỏ khi di chuột qua nút */
   font-family: Poppins; /* Font chữ của nút */
   font-size: 18px; /* Cỡ chữ của nút */
 }
 
 .btn_cancel:hover {
-  background-color: #0056b3; /* Màu nền của nút khi di chuột qua */
+  background-color: #ff7f7f; /* Màu nền của nút khi di chuột qua */
 }
 
 .btn_print {
@@ -481,7 +481,7 @@ a {
   background-color: #00256c; /* Màu nền của nút */
   color: #fff; /* Màu chữ của nút */
   border: none; /* Xóa viền của nút */
-  border-radius: 5px; /* Bo tròn góc của nút */
+  border-radius: 10px; /* Bo tròn góc của nút */
   cursor: pointer; /* Hiển thị icon con trỏ khi di chuột qua nút */
   font-family: Poppins; /* Font chữ của nút */
   font-size: 18px; /* Cỡ chữ của nút */
